--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
-numpy
-pandas
-matplotlib
-seaborn
-scikit-learn
-ipykernel
-catboost
-xgboost
-dill
-flask
-flask_cors
-lime
+numpy==1.24.4
+pandas==2.0.3
+matplotlib==3.7.3
+seaborn==0.12.2
+scikit-learn==1.2.2
+ipykernel==6.29.5
+catboost==1.2.2
+xgboost==1.7.6
+dill==0.3.7
+Flask==2.3.3
+Flask-Cors==4.0.1
+lime==0.2.0.1
+gunicorn==22.0.0
 #-e .
